<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="swap_languages">Swap Languages</string>
    <string name="enter_a_text_to_translate">Enter a text to translate</string>
    <string name="translate">Translate</string>
    <string name="copy">Copy</string>
    <string name="play_loud">Play loud</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="history">History</string>
    <string name="error_service_unavailable">Oops! An error happened.\nError Server Unavailable</string>
    <string name="error_client">Oops! An error happened.\nError Client</string>
    <string name="error_server">Oops! An error happened.\nError Server</string>
    <string name="error_unknown">Oops! An error happened.\nError Unknown</string>
    <string name="record_audio">Record audio</string>
    <string name="error_speech_recognition_unavailable">Speech recognition is not available</string>
    <string name="stop_recording">Stop recording</string>
    <string name="apply">Apply</string>
    <string name="record_again">Record again</string>
    <string name="listening">Listening</string>
    <string name="start_talking">Click record and start talking</string>
</resources>
